Some changes in Font Editor and Auto(De)Packer.

--- a/master/About.resx
+++ b/master/About.resx
@@ -124,9 +124,9 @@ moded by pashok6798 (from Den Em's agreement)
 Source code on github: https://github.com/pashok6798/TTG_Tools
 (Original developer's e-mail: d3n123@rambler.ru)
 
-Игры с полной поддержкой в примерном порядке появления их поддержки:
+List of supported games:
 Tales of Monkey Island, Sam and Max: Season Two, Wallace and Gromit's Grand Adventures, CSI: Deadly Intent, Sam and Max: The Devil's Playhouse, Puzzle Agent, CSI: Fatal Conspiracy, Poker Night at the Inventory, Back to the Future: The Game, Strong Bad, Hector: The Badge of Carnage, Puzzle Agent 2, Jurassic Park: The Game, The Walking Dead, Poker Night 2, Wolf Among Us, The Walking Dead Season Two, Tales from the Borderlands, Game of Thrones, Minecraft: Story Mode (Seasons one and two), Walking Dead: Michonne, Batman (Seasons one and two).
-Возможно работает ещё с чем-то, но я не проверял.
+Maybe some games doesn't work. Please contact with me if you will have problems.
 
 ===
 [Version history]
