--- a/master/About.resx
+++ b/master/About.resx
@@ -131,7 +131,9 @@ Maybe some games doesn't work. Please contact with me if you will have problems.
 ===
 [Version history]
 
-v1.0.4 RC1 (19.01.19)
+v1.0.4 (09.02.19)
++ TTG Tools:
+Minor fixes
 + Auto(De)Packer:
 Return support latest games.
 Add support BC4 and BC5 formats (need photoshop plugin Intel Texture Works: https://software.intel.com/en-us/articles/intel-texture-works-plugin)
