Removed all possibles russian text in tool

--- a/master/About.resx
+++ b/master/About.resx
@@ -131,9 +131,9 @@ Maybe some games doesn't work. Please contact with me if you will have problems.
 ===
 [Version history]
 
-v.1.0.5 (xx.xx.20)
+v.1.0.5 (13.09.20)
 + TTG Tools:
-Removed russian messages. Need find out how to make multilanguage support tool.
+Removed russian messages.
 
 v1.0.4 (09.02.19)
 + TTG Tools:
