--- a/master/About.resx
+++ b/master/About.resx
@@ -131,6 +131,10 @@ Maybe some games doesn't work. Please contact with me if you will have problems.
 ===
 [Version history]
 
+v.1.0.6 (xx.12.2020)
++ Archive Packer
+Now progress bar doesn't freeze when tool packs archive.
+
 v.1.0.5 (13.09.20)
 + TTG Tools:
 Removed russian messages.
