Minor replace structure tool

--- a/master/About.resx
+++ b/master/About.resx
@@ -137,12 +137,12 @@ Maybe some games doesn't work. Please contact with me if you will have problems.
 ===
 [Version history]
 
-v.1.0.6 beta (17.12.2020)
+v.1.0.6 (XX.XX.2021)
 +TTG Tools:
 Add support "Sam &amp; Max save the World Remastered"
+Add support new version "Tales from the Borderlands"
 +Auto (De)Packer &amp; Archive Packer:
 Now it saves your selected options.
-
 + Archive Packer:
 Now progress bar doesn't freeze when tool packs archive.
 
