--- a/master/About.resx
+++ b/master/About.resx
@@ -137,6 +137,13 @@ Maybe some games doesn't work. Please contact with me if you will have problems.
 ===
 [Version history]
 
+v.1.0.7 (12.04.2021)
++TTG Tools:
+Add encryption key "Minecraft: Season two"
+Add texture viewer. Experimental version. Tested only DXT1 and DXT5 textures.
++Auto(De)Packer:
+Add support Nintendo Switch swizzle. Expiremental version!
+
 v.1.0.6 (21.02.2021)
 +TTG Tools:
 Add support "Sam &amp; Max save the World Remastered"
